packages/svelte/tests/compiler-errors/samples/style-unclosed-eof/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'expected-token',
		message: 'Expected token </style',
		position: [31, 31]
	}
});
